# rapidvms

./: .gitattributes  LICENSE  Makefile  README  Readme.md  clear.bat  clear.sh  common.mk  dllclear.bat  dllprepare.bat  maclink.sh  rellang.bat  relwin32.bat  relwin64.bat  rules-macos.mk  rules-osx.mk  rules-pi3.mk  rules.mk
client/: Makefile  clear.bat
client/disk/: vschdddevice.h  vschdddevice.ui  vschddedit.ui  vschddone.cpp  vschddone.ui  vschddoneedit.ui
client/main/: main.cpp  vsccameraadd.cpp  vscdeviceipc.cpp  vscdeviceipc.h  vscdevicelist.cpp  vscdevicetrash.h  vscdevicetree.cpp  vscdevicetree.h  vscdockwidget.h  vscipcgroupconf.cpp  vscipcgroupconf.ui  vscipcgroupmap.h  vscipcgroupmap.ui  vscmainwindows.cpp  vscmainwindows.h  vscmainwindows.ui  vscpanel.cpp  vscpanel.h  vscpanel.ui  vscpaneltaskitem.ui  vscplaycontrol.cpp  vscsearch.ui  vscviewconf.h
client/prj_linux/: Makefile  veclient.pri  veclient.pro
client/prj_win32/: resource.h  veclient.sln  veclient.vcxproj  veclient.vcxproj.filters
client/recordplan/: vsclineedit.cpp  vsclineedit.h  vscplaneditline.cpp  vscplaneditline.h  vscrecordplan.cpp
client/setting/: switchbutton.cpp  vschdfsrecord.cpp  vschdfsrecord.ui  vsclanguage.ui  vsclicense.cpp  vsclicense.h  vsclicense.ui  vscminingsetting.cpp  vscminingsetting.ui  vscoapi.h  vscrtsprtp.ui  vscsetting.h  vscsetting.ui  vscuser.cpp  vscuserstatus.h  vscuserstatus.ui  vscversion.cpp  vscvideosetting.cpp  vscvideosetting.ui
client/vms/: vscsiteadd.cpp  vscsiteadd.ui  vscvms.cpp
cmnlib/: Makefile  clear.bat
cmnlib/prj_win32/: cmnlib.sln  cmnlib.vcxproj  cmnlib.vcxproj.filters
cmnlib/src/XSDK/source/: CMakeLists.txt  README.md
cmnlib/src/XSDK/source/unit_tests/include/: DerivedObject.h  LargeFileTests.h  WindowsCompliantUnicodeConstants.h  XCommandQueueTest.h  XDomParserTest.h  XDurationTest.h  XDynamicLibraryTest.h  XFunctorFPTest.h  XHashTest.h  XIWeakRefTest.h  XMD5Test.h  XMemoryMapTest.h  XMemoryTest.h  XMutexTest.h  XObjCountTest.h  XPathTest.h  XSSLSocketTest.h  XSocketAddressTest.h  XSocketTest.h  XStopWatchTest.h  XStringSliceTest.h  XTimedCommandQueueTest.h  XUuidTest.h  XWeakRefTest.h
cmnlib/src/XSDK/source/unit_tests/source/: CACert.cpp  ClosestFindTest.cpp  LargeFileTests.cpp  NewDeleteTest.cpp  PrivateKey_2.cpp  ServerCRT_2.cpp  XBitsyTest.cpp  XBlockingQueueTest.cpp  XCacheTest.cpp  XCommandQueueTest.cpp  XConditionTest.cpp  XDomParserTest.cpp  XDurationTest.cpp  XDynamicLibraryTest.cpp  XFullVariantTest.cpp  XGuardTest.cpp  XIWeakRefTest.cpp  XLoggerTest.cpp  XMD5Test.cpp  XMonoClockTest.cpp  XMutexTest.cpp  XObjCountTest.cpp  XRefTest.cpp  XSocketAddressTest.cpp  XSocketTest.cpp  XStringSliceTest.cpp  XSystemStatsTest.cpp  XTimedCommandQueueTest.cpp  XTimerTest.cpp  XUDPSenderTest.cpp  XWeakRefTest.cpp  framework.cpp
cmnlib/src/cppkit/source/: CMakeLists.txt  README.md  todo.txt
cmnlib/src/cppkit/source/ut/include/: chrono_test.h  ck_byte_ptr_test.h  ck_command_queue_test.h  ck_json_test.h  ck_large_files_test.h  ck_memory_map_test.h  ck_memory_test.h  ck_path_test.h  ck_socket_address_test.h  ck_socket_test.h  ck_statistics_test.h  ck_string_slice_test.h  ck_timer_test.h  condition_variable_test.h  framework.h  linux_compliant_unicode_constants.h  windows_compliant_unicode_constants.h
cmnlib/src/cppkit/source/ut/source/: chrono_test.cpp  ck_actor_test.cpp  ck_byte_ptr_test.cpp  ck_dynamic_library_test.cpp  ck_nullable_test.cpp  ck_path_test.cpp  ck_random_test.cpp  ck_socket_test.cpp  ck_string_slice_test.cpp  ck_timer_test.cpp  ck_udp_sender_test.cpp  ck_variant_test.cpp
devices/include/: cefactory.hpp  cmnoapiserver.hpp  cmnoapiserverimpl.hpp  cmnserver.hpp  cmnserverimpl.hpp  conf.hpp  confdb.hpp  confdbimpl.hpp  database.hpp  datasink.hpp  device.hpp  deviceimpl.hpp  factory.hpp  factoryimpl.hpp  ffmpeg_api.hpp  ffmpeg_codecs.hpp  ffmpeg_impl.hpp  ffmpeg_scale.hpp  hdddevice.hpp
devices/old/: config.hpp  datasrc.hpp  mpipeline.hpp
doc/: CentOS-Base.repo  androidbuild  coderule.txt  linux-build  macosbuild  oapi.md  rasp3-build  win32build
doc/translations/: opencvr-translations.xlsx  opencvr_zh.qph
include/client/: clientfactory.hpp  clientfactoryimpl.hpp  storclient.hpp  storclientimpl.hpp  storcmn.hpp  storfactory.hpp  storfactoryimpl.hpp  storstream.hpp  storstreamimpl.hpp  storsyncinf.hpp  storsyncinfimpl.hpp
include/config/: clientconfdb.hpp  clientconfdbimpl.hpp  conf.hpp  confdb.hpp  confdbimpl.hpp  confver.hpp  linkproto.pb.cc  linkproto.pb.h  linksystem.pb.cc  linksystem.pb.h  sysdb.hpp  vidconf.pb.cc  vidconf.pb.h  videnv.hpp
linksdk/: readme
linux/: env.sh  opencvr-hadoop.sh  root.sh  start-noui.sh  start.sh  vdceye-hadoop.sh
modules/: readme.txt
oapi/: oapi.hpp  oapic.hpp  oapicimpl.hpp  oapicmn.hpp  oapiimpl.hpp  oapiproto.hpp  oapis.hpp  oapisimpl.hpp
onvif/: Makefile  Readme.md  clear.bat
prj_win32/: rapidvms.sln
scripts/: dllclear.bat  dllprepare-client-win32.bat  dllprepare-client-x64.bat  dllprepare-vecvr-win32.bat  dllprepare-vecvr-x64.bat
veapp/: Makefile
vecvc/: opencvc.txt
vecvr/: Makefile
vecvv/: opencvv.txt
velib/: Makefile  clear.bat
veuilib/: Makefile  Readme
xcmnlib/: Makefile
(+1524 files in other folders)
